add btn select lang

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
       <div class="container">
         <div class="header__wrapper">
           <a href="#home" class="logo">ArtemY.</a>
-          <select>
-            <option value="en">EN</option>
-            <option value="ua">UA</option>
-          </select>
+          <div class="header__form-group">
+            <button class="header__dropdown-btn">EN</button>
+            <ul class="header__dropdown-list">
+              <li class="header__dropdown-item" data-value="en">en</li>
+              <li class="header__dropdown-item" data-value="ua">ua</li>
+            </ul>
+          </div>
           <div className="header__nav">
             <ul class="header__list">
               <li class="header__item">
