--- a/index.html
+++ b/index.html
@@ -154,10 +154,14 @@
                     <i class="bx bxs-contact"></i>
                     <p class="lng-contact-btn">Contact Me</p>
                   </a>
-                  <button class="home__btn">
+                  <a
+                    class="home__btn"
+                    href="/ArtemYakushkin-FrontEndDeveloper.pdf"
+                    download="ArtemYakushkin-FrontEndDeveloper.pdf"
+                  >
                     <i class="bx bx-download"></i>
                     <p class="lng-resume-btn">My Resume</p>
-                  </button>
+                  </a>
                 </div>
               </div>
               <div class="home__sci">
@@ -392,6 +396,15 @@
             </div>
             <div class="skills__slider">
               <span class="skills__mongo"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>Figma</p>
+              <p class="skills__percent">50%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__figma"></span>
             </div>
           </div>
         </div>
