--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,9 +14,12 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./style/main.css" />
+
     <title>Portfolio</title>
   </head>
+
   <body>
     <header class="header">
       <div class="container">
@@ -153,14 +157,6 @@
                   <a class="home__btn" href="#contacts">
                     <i class="bx bxs-contact"></i>
                     <p class="lng-contact-btn">Contact Me</p>
-                  </a>
-                  <a
-                    class="home__btn"
-                    href="/ArtemYakushkin-FrontEndDeveloper.pdf"
-                    download="ArtemYakushkin-FrontEndDeveloper.pdf"
-                  >
-                    <i class="bx bx-download"></i>
-                    <p class="lng-resume-btn">My Resume</p>
                   </a>
                 </div>
               </div>
@@ -507,7 +503,7 @@
     <script src="./js/gallery.js" type="module" defer></script>
     <script src="./js/slider.js" type="module" defer></script>
     <script src="./js/modal.js" type="module" defer></script>
-    <script src="./js/lang.js"></script>
-    <script src="./js/toggleLang.js"></script>
+    <script src="./js/lang.js" defer></script>
+    <script src="./js/toggleLang.js" defer></script>
   </body>
 </html>
