--- a/index.html
+++ b/index.html
@@ -487,10 +487,7 @@
                 <i class="bx bxl-telegram"></i>
                 <p class="footer__subtitle lng-telegram">Telegram</p>
               </div>
-              <a
-                href="tg://resolve?domain=@ArtemYakushkin"
-                class="footer__link"
-              >
+              <a href="tg://resolve?domain=ArtemYakushkin" class="footer__link">
                 @ArtemYakushkin
               </a>
             </div>
