--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <div class="footer__info">
               <div class="footer__subtitle-box">
                 <i class="bx bxs-phone-call"></i>
-                <p class="footer__subtitle lng-number">Phone number</p>
+                <!-- <p class="footer__subtitle lng-number">Phone number</p> -->
               </div>
               <a href="tel:+380507025708" class="footer__link">
                 +38 050 702 5 708
@@ -473,7 +473,7 @@
             <div class="footer__info">
               <div class="footer__subtitle-box">
                 <i class="bx bx-envelope"></i>
-                <p class="footer__subtitle lng-email">Email Address</p>
+                <!-- <p class="footer__subtitle lng-email">Email Address</p> -->
               </div>
               <a
                 href="mailto:artem.frontdeveloper@gmail.com"
@@ -485,7 +485,7 @@
             <div class="footer__info">
               <div class="footer__subtitle-box">
                 <i class="bx bxl-telegram"></i>
-                <p class="footer__subtitle lng-telegram">Telegram</p>
+                <!-- <p class="footer__subtitle lng-telegram">Telegram</p> -->
               </div>
               <a href="tg://resolve?domain=ArtemYakushkin" class="footer__link">
                 @ArtemYakushkin
