--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <div class="container">
         <div class="header__wrapper">
           <a href="#home" class="logo">ArtemY.</a>
-          <div class="header__form-group">
+          <!-- <div class="header__form-group">
             <button class="header__dropdown-btn">EN</button>
             <ul class="header__dropdown-list">
               <li class="header__dropdown-item" data-value="en">en</li>
               <li class="header__dropdown-item" data-value="ua">ua</li>
             </ul>
-          </div>
+          </div> -->
           <div className="header__nav">
             <ul class="header__list">
               <li class="header__item">
@@ -500,7 +500,7 @@
     <script src="./js/gallery.js" type="module" defer></script>
     <script src="./js/slider.js" type="module" defer></script>
     <script src="./js/modal.js" type="module" defer></script>
-    <script src="./js/lang.js" defer></script>
-    <script src="./js/toggleLang.js" defer></script>
+    <!-- <script src="./js/lang.js" defer></script> -->
+    <!-- <script src="./js/toggleLang.js" defer></script> -->
   </body>
 </html>
